Fix vignette bug

--- a/vignettes/using_mask_names.qmd
+++ b/vignettes/using_mask_names.qmd
@@ -26,7 +26,7 @@ library(stats)
 In this example, we will use the `williams` dataset from the `{vazul}` package.
 
 ```{r}
-?vazul::williams
+head(vazul::williams)
 
 glimpse(vazul::williams)
 
