--- a/vignettes/using_mask_names.qmd
+++ b/vignettes/using_mask_names.qmd
@@ -18,6 +18,7 @@ In certain studies, variable names should be masked to prevent reearcher bias. E
 #| label: setup
 #| message: false
 
+library(vazul)
 library(dplyr)
 library(stats)
 
@@ -40,8 +41,8 @@ We will apply masking to the variables related to well-being, which are prefixed
 set.seed(84)
 
 masked_williams <-
-    vazul::williams |> 
-    vazul::mask_names(starts_with("SexUnres"),
+    williams |> 
+    mask_names(starts_with("SexUnres"),
                starts_with("Impuls"),
                starts_with("Opport"),
                starts_with("InvEdu"),
@@ -73,7 +74,7 @@ Applying the same analysis on the original dataset reveals the names of the vari
 ```{r}
 set.seed(123)
 efa_orig <-
-    vazul::williams |> 
+    williams |> 
     select(SexUnres_1:InvChild_2_r) |>
     factanal(factors = 5, rotation = "varimax")
 
